cabal-version: 3.0
name: monoid-action-t
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version: 0.1.0.0
synopsis: Stateful monad transformer based on monoidal actions
description:
  A generalisation of the AppendT monad transformer
  that can be defined for any monoid action.

license: MIT
license-file: LICENSE
author: Manuel Bärenz
maintainer: programming@manuelbaerenz.de
copyright: MIT
category: Control
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with:
  ghc ==8.6
  ghc ==8.8
  ghc ==8.10
  ghc ==9.0
  ghc ==9.2
  ghc ==9.4
  ghc ==9.6
  ghc ==9.8
  ghc ==9.10

source-repository head
  type: git
  location: https://github.com/turion/monoid-action-t

common opts
  ghc-options: -Wall
  default-extensions:
    BangPatterns
    DeriveFunctor
    ScopedTypeVariables
    TupleSections

library
  import: opts
  exposed-modules: Control.Monad.Trans.MonoidAction
  build-depends:
    base >=4.12 && <4.22,
    monoid-extras ^>=0.6,
    mtl >=2.2 && <2.4,
    transformers >=0.5.6 && <0.7,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite monoid-action-t-test
  import: opts
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    monoid-action-t,
